test/sematic/resources/positive/basic_paren.tig
let
    var a := 10
in
    a := (2+3)/6
end