test/sematic/resources/negative/false_vardec2.tig
let
    var a : string := 1
in
end